# abm

./: Cargo.toml  README.md  diffuse.wgsl  draw_agent.wgsl  draw_signal.wgsl  engine.rs
GPU Debug/GPU Debug.xcodeproj/: project.pbxproj
GPU Debug/GPU Debug.xcodeproj/project.xcworkspace/xcuserdata/ryanb.xcuserdatad/: UserInterfaceState.xcuserstate
GPU Debug/GPU Debug.xcodeproj/xcshareddata/xcschemes/: Dbg.xcscheme
GPU Debug/GPU Debug.xcodeproj/xcuserdata/ryanb.xcuserdatad/xcschemes/: xcschememanagement.plist
archive/: draw_agent.wgsl  draw_signal.wgsl copy  engine_v0.1.0.rs  engine_v0.1.1.rs  engine_v0_1_2.rs  entry_point.html  flock.wgsl  framework.rs  main.js  main.rs  matrix_multiply.wgsl
imgui-wgpu/: Cargo.toml
imgui-wgpu/examples/: cube.rs
main/: engine.rs  layer.rs  zone.rs
shaders/: agent_compute.wgsl  clear_agent_buffers.wgsl  compute_agents.wgsl  compute_diffuse.wgsl  diffuse.wgsl  draw_signal.wgsl  vert_frag_texture_sampler.wgsl
src/: engine.rs  gpu_tasks.rs  gpu_window.rs
