[package]
name = "gpgpu"
version = "0.1.4"
edition = "2021"
authors = ["Ryan Berg"]

[dependencies]
wgpu = "0.13.1"
env_logger = "0.9.0"
pollster = "0.2.5"
log = "0.4"

rand = "0.8.5"

bitflags = "1.3.2"
bytemuck = { version = "1.4", features = ["derive"] }

winit = "0.26.0"
imgui = "0.8.2"
imgui-winit-support = { version = "0.8.2", default-features = false, features = ["winit-26"] }

imgui-wgpu = "0.20.0"

image = { version = "0.24.2", default-features = false, features = ["png"] }

[[bin]]
name = "bis-22"
path = "src/engine.rs"